地水火風人評分

--- a/app/src/main/res/layout/fragment_dashboard.xml
+++ b/app/src/main/res/layout/fragment_dashboard.xml
@@ -1,25 +1,375 @@
 <?xml version="1.0" encoding="utf-8"?>
-<!--畫面右下角設定頁面-->
+    <!--／畫面中下詳細查詢-->
 <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:tools="http://schemas.android.com/tools"
-    android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    tools:context=".ui.dashboard.DashboardFragment">
+xmlns:app="http://schemas.android.com/apk/res-auto"
+xmlns:tools="http://schemas.android.com/tools"
+android:layout_width="match_parent"
+android:layout_height="match_parent"
+tools:context=".ui.notifications.NotificationsFragment">
 
-    <TextView
-        android:id="@+id/text_dashboard"
+<ScrollView
+    android:layout_width="446dp"
+    android:layout_height="866dp"
+    app:layout_constraintBottom_toBottomOf="parent"
+    app:layout_constraintEnd_toEndOf="parent"
+    app:layout_constraintStart_toStartOf="parent"
+    app:layout_constraintTop_toTopOf="parent"
+    app:layout_constraintVertical_bias="1.0">
+
+    <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:layout_marginStart="8dp"
-        android:layout_marginTop="8dp"
-        android:layout_marginEnd="8dp"
-        android:textAlignment="center"
-        android:textSize="20sp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.0"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.251" />
+        android:background="#ACACAC"
+        android:orientation="vertical">
+        <!--／各縣市按鈕滾動頁面-->
+
+
+        <Button
+            android:id="@+id/City1"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="55dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="台北市"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City2"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="桃園市"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City3"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="新北市"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City4"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="基隆市"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City5"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="新竹縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City6"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="苗栗縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City7"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="台中市"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City8"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="彰化縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City9"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="南投縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City10"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="雲林縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City11"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="嘉義縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City12"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="台南市"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City13"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="高雄市"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City14"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="屏東縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City15"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="台東縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City16"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="花蓮縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City17"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="宜蘭縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City18"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="連江縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City19"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="澎湖縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+        <Button
+            android:id="@+id/City20"
+            android:layout_width="400dp"
+            android:layout_height="80dp"
+            android:layout_marginStart="24dp"
+            android:layout_marginLeft="24dp"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="100dp"
+            android:background="@color/ic_launcher_background"
+            android:gravity="center_vertical"
+            android:text="金門縣"
+            android:textColor="#BA000000"
+            android:textSize="34sp"
+            android:textStyle="bold"
+            app:backgroundTint="@null"
+            app:layout_constraintStart_toEndOf="@+id/myImageView"
+            app:layout_constraintTop_toTopOf="parent" />
+
+
+
+
+
+
+    </LinearLayout>
+</ScrollView>
 </androidx.constraintlayout.widget.ConstraintLayout>
